--- a/quemsomos.html
+++ b/quemsomos.html
@@ -101,12 +101,12 @@
 <div class="container5">
     <div class="card">
         <img src="img/unha.png" alt="Unhas">
-        <button onclick="window.location.href='informaçoes.html'">Mais Informações</button>
+        <button onclick="window.location.href='informacoes.html'">Mais Informações</button>
     </div>
 
     <div class="card">
         <img src="img/cilios.png" alt="Cílios">
-        <button onclick="window.location.href='informações.html'">Mais Informações</button>
+        <button onclick="window.location.href='informacoes.html'">Mais Informações</button>
     </div>
 </div>
     </main>
