--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
         <section class="content">
             <div class="text">
-                <h2>Alongamento de unhas em acrílico, o toque de autocuidado e estilo prolongado</h2>
+                <h2>Alongamento de unhas em Fibra de Vidro e Gel na Tips, o toque de autocuidado e estilo prolongado</h2>
                 <p>
                     Unhas feitas são sinônimo de autoestima renovada. Cuidar das unhas vai além da estética; reflete amor-próprio e autoconfiança. Uma manicure fresca pode transformar nosso humor e proporcionar um momento de autocuidado e relaxamento, longe das obrigações diárias. Escolher cores e estilos é uma forma de expressar nossa personalidade. Unhas bem cuidadas também impressionam, transmitindo atenção aos detalhes em diversas situações. Por isso, desejamos a você tudo de bom, incluindo unhas feitas! Celebre-se a cada visita ao estúdio e veja como isso eleva sua confiança e bem-estar.
                 </p>
